tests/ui/feature-gates/feature-gate-builtin_syntax.stderr
error[E0658]: `builtin #` syntax is unstable
  --> $DIR/feature-gate-builtin_syntax.rs:6:15
   |
LL |     builtin # offset_of(Foo, v);
   |               ^^^^^^^^^
   |
   = note: see issue #110680 <https://github.com/rust-lang/rust/issues/110680> for more information
   = help: add `#![feature(builtin_syntax)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0658`.
